--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,9 @@
 <body>
     <h1>회원가입</h1>
     <form action="/signup" method="POST">
+        <label for="email">이메일:</label>
+        <input type="email" id="email" name="email" required><br>
+
         <label for="username">사용자 이름:</label>
         <input type="text" id="username" name="username" required><br>
 
