--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,23 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
     <title>회원가입</title>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <style>
+        * {
+            font-family: 'Jua', sans-serif;
+        }
+
+        .wrap {
+            margin: auto;
+            width: 900px;
+        }
+
+        .title {
+            background-color: gainsboro;
+            padding: 20px 30px;
+        }
+
+        .form-group {
+            margin: 10px 0;
+        }
+
+        .posting-box {
+            margin: 10px auto 30px auto;
+            width: 500px;
+            border: 3px solid black;
+            border-radius: 5px;
+            padding: 25px;
+        }
+    </style>
+    <script>
+        function signup() {
+            $.ajax({
+                type: "POST",
+                url: "/api/signup",
+                data: {
+                    email_give: $('#input-email').val(),
+                    pw_give: $('#input-password').val(),
+                    nickname_give: $('#input-nickname').val()
+                },
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        alert('회원가입이 완료되었습니다.')
+                        window.location.href = '/login'
+                    } else {
+                        alert(response['msg'])
+                    }
+                }
+            })
+        }
+    </script>
 </head>
+
 <body>
-    <h1>회원가입</h1>
-    <form action="/signup" method="POST">
-        <label for="email">이메일:</label>
-        <input type="email" id="email" name="email" required><br>
-
-        <label for="username">사용자 이름:</label>
-        <input type="text" id="username" name="username" required><br>
-
-        <label for="password">비밀번호:</label>
-        <input type="password" id="password" name="password" required><br>
-
-        <input type="submit" value="가입하기">
-    </form>
+<div class="wrap">
+    <div class="title">
+        <h1 class="display-4">회원가입</h1>
+        <hr class="my-4">
+        <div class="posting-box" id="post-box">
+            <div class="form-group">
+                <label>ID</label>
+                <input type="email" class="form-control" aria-describedby="emailHelp"
+                       id="input-email" placeholder="">
+            </div>
+            <div class="form-group">
+                <label>닉네임</label>
+                <input type="email" class="form-control" aria-describedby="emailHelp"
+                       id="input-nickname" placeholder="">
+            </div>
+            <div class="form-group">
+                <label>비밀번호</label>
+                <input type="email" class="form-control" aria-describedby="emailHelp"
+                       id="input-password" placeholder="">
+            </div>
+            <button type="submit" onclick="signup()" class="btn btn-primary">회원가입</button>
+        </div>
+    </div>
+</div>
 </body>
+
 </html>
