--- a/templates/login.html
+++ b/templates/login.html
@@ -81,8 +81,8 @@
             </div>
             <div class="form-group">
                 <label>비밀번호</label>
-                <input type="email" class="form-control" aria-describedby="emailHelp"
-                       id="input-password" placeholder="">
+                <input type="password" class="form-control" aria-describedby="emailHelp"
+                       id="input-password" autocomplete="current-password" placeholder="">
             </div>
             <button type="submit" onclick="login()" class="btn btn-primary">로그인</button>
         </div>
