--- a/templates/main.html
+++ b/templates/main.html
@@ -74,21 +74,39 @@
             if (orderMode == false) {
                 alert('참여완료!')
                 $('#parti-button').empty()
-                $('#parti-button').append('<button id="show-info" onclick="gotoinfo()"> 게시판보기</button>')
+                $('#parti-button').append('<button id="show-info" onclick="go_order_detail()"> 게시판보기</button>')
                 orderMode = true
             }
             
         }
-        function gotoinfo() {
+        function go_order_detail() {
             alert('게시판으로갑니다')
 
+        }
+
+        function go_write() {
+            $.ajax({
+                type: "GET",
+                url: "/write",
+                data: {},
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        // 로그인한 사용자면 닉네임을 보여주는 알람을 띄움!
+                        let nickname = response['nickname']
+                        alert(`반갑습니다 ${nickname}님!!`)
+                    } else {
+                        alert(response['msg'])
+                        
+                    }
+                }
+            })
         }
     </script>
 </head>
 
 <body>
     <div class = "rightbutton">
-        <button>로그아웃</button> <button>글쓰기</button>
+        <button>로그아웃</button> <button id = "write-order" onclick = "go_write()">글쓰기</button>
         <div style = "width:180px; border: 1px dotted;"> <div class = "lefttextbox"> 먹고싶은걸 고르셨다면?</div></div>
         <hr width = "100%" color = "black">
         
