--- a/templates/main.html
+++ b/templates/main.html
@@ -50,8 +50,7 @@
                 success: function (response) {
                     if (response['result'] == 'success') {
                         // 로그인한 사용자면 닉네임을 보여주는 알람을 띄움!
-                        let nickname = response['nickname']
-                        alert(`반갑습니다 ${nickname}님!!`)
+                        console.log(response)
                     } else {
                         alert(response['message'])
                         window.location.href = '/login'
@@ -153,12 +152,17 @@
 <body>
     <div class = "rightbutton">
         <!-- 로그인 상태에 따라 로그아웃 또는 로그인 버튼을 표시 -->
-        {% if 'email' in session %}
-        <button onclick="logout()">로그아웃</button>
+        {% if user_email %}
+            <p>안녕하세요, {{ user_email }}님!</p>
+            <button onclick="logout()">로그아웃</button>
+            <button id="write-order" onclick="go_write()">글쓰기</button>
+        </div>
         {% else %}
-        <button onclick="go_login()">로그인</button>
-        {% endif %}
-        <button id="write-order" onclick="go_write()">글쓰기</button>
+        <div class="rightbutton">
+            <button onclick="go_login()">로그인</button>
+            <button id="write-order" onclick="go_write()">글쓰기</button>
+        </div>
+        {% endif %}  {# if 블록 닫기 #}
         <div style = "width:180px; border: 1px dotted;"> <div class = "lefttextbox"> 먹고싶은걸 고르셨다면?</div></div>
         <hr width = "100%" color = "black">
         
