--- a/templates/write.html
+++ b/templates/write.html
@@ -62,7 +62,8 @@
             'food_name': food_name,
             'ppl_num_aim': ppl_num_aim,
             'ppl_num_max': ppl_num_max,
-            'ppl_num_now': 1
+            'ppl_num_now': 1,
+            
           },
           success: function (response) {
               console.log(response)
